fix: Corrige o .env

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,11 @@
 spring.application.name=CadastroDeNinjas
 
-spring.h2.console.path=/h2-console
-
-spring.datasource.dirver org.h2.Driver
 spring.datasource.url=${DATABASE_URL}
 spring.datasource.username=${DATABASE_USERNAME}
 spring.datasource.password=${DATABASE_PASSWORD}
+spring.datasource.driver-class-name=org.h2.Driver
+
+spring.h2.console.path=/h2-console
 
 # Configuracoes do JPA // HIBERNATES
 spring.jpa.hibernate.ddl-auto=update
@@ -16,3 +16,5 @@ spring.h2.console.enabled=true
 spring.flyway.enable=true
 spring.flyway.locations=classpath:/db/migration
 spring.flyway.baseline-on-migrate=true
+
+
