feat: adiciona Swagger e ajusta configurações da aplicação

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.application.name=CadastroDeNinjas
 
-spring.datasource.url=${DATABASE_URL}
-spring.datasource.username=${DATABASE_USERNAME}
-spring.datasource.password=${DATABASE_PASSWORD}
+spring.datasource.url=${DATABASE_URL:jdbc:h2:~/test}
+spring.datasource.username=${DATABASE_USERNAME:sa}
+spring.datasource.password=${DATABASE_PASSWORD:}
 spring.datasource.driver-class-name=org.h2.Driver
 
 spring.h2.console.path=/h2-console
@@ -13,7 +13,7 @@ spring.jpa.show-sql=true
 spring.h2.console.enabled=true
 
 # Confoiguracoes do FlyWay
-spring.flyway.enable=true
+spring.flyway.enabled=true
 spring.flyway.locations=classpath:/db/migration
 spring.flyway.baseline-on-migrate=true
 
